# ASEmoji

./: .gitignore  ASEmoji.h  CMakeLists.txt  EmojiList.md  LICENSE  Makefile  README.md
cmake/: ASEmojiConfig.cmake  ASEmojiTargets.cmake
headers/: ASEmoji.h  EmojiData.h
scripts/: parse_emoji_test.py  update_cpp.py  update_emoji_list.py  update_md.py
sources/: ASEmoji.cpp  EmojiData.cpp  emoji.cpp  emoji.h
